--- a/voting/index.html
+++ b/voting/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Number Guesser</title>
+    <title>Voting</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
@@ -10,26 +10,20 @@
   <body>
     <div class="game-container">
       <header>
-        <h1>Number Guesser!</h1>
+        <h1>Voting</h1>
       </header>
 
       <div class="rounds">
-        <p class="round-label">Round <span id="round-number">1</span></p>
-        <p class="guess-label">Target Number: <span id="target-number">?</span></p>
+        <p class="round-label">Round <span id="round-number">1</span>...</p>
+        <div class="next-round-container">
+        <button class="button" id="next-round" disabled>Next Round</button>
+        </div>
       </div>
 
       <div class="guessing-area">
-        <div class="guess computer-guess">
-          <div class="guess-title">
-            <p class="guess-label">Computer</p>
-            <p class="score-label">Score: <span id="computer-score">0</span></p>
-          </div>
-          <p id="computer-guess">?</p>
-          <p class="winning-text" id="computer-wins"></p>
-        </div>
         <div class="guess human-guess">
           <div class="guess-title">
-            <p class="guess-label">You</p>
+            <p class="guess-label">Option A</p>
             <p class="score-label">Score: <span id="human-score">0</span></p>
           </div>
           <input type="number" id="human-guess" min=0 max=9 value=0>
@@ -37,16 +31,43 @@
             <button class="number-control left" id="subtract" disabled>-</button>
             <button class="number-control right" id="add">+</button>
           </div>
-          <button class="button" id="guess">Make a Guess</button>
+          <button class="button" id="guess">Vote "A"</button>
+        </div>
+        <div class="guess human-guess">
+          <div class="guess-title">
+            <p class="guess-label">Option B</p>
+            <p class="score-label">Score: <span id="human-score">0</span></p>
+          </div>
+          <input type="number" id="human-guess" min=0 max=9 value=0>
+          <div class="number-controls">
+            <button class="number-control left" id="subtract" disabled>-</button>
+            <button class="number-control right" id="add">+</button>
+          </div>
+          <button class="button" id="guess">Vote "B"</button>
+        </div>
+        <div class="guess computer-guess">
+          <div class="guess-title">
+            <p class="guess-label">Stats</p>
+            <p class="score-label">Score: <span id="computer-score">0</span></p>
+          </div>
+          <p class="">Max voting power (active streak): <span id="target-number">?</span></p>
+          <p class="">Rounds voted: <span id="target-number">?</span></p>
+          <p class="">Rounds missed: <span id="target-number">?</span></p>
+          <!--<p id="computer-guess">?</p>
+          <p class="winning-text" id="computer-wins"></p>-->
+        </div>
+        <div class="guess computer-guess">
+          <div class="guess-title">
+            <p class="guess-label">History</p>
+            <p class="score-label">Score: <span id="computer-score">0</span></p>
+          </div>
+          <p id="computer-guess">?</p>
+          <p class="winning-text" id="computer-wins"></p>
         </div>
       </div>
 
-      <div class="next-round-container">
-        <button class="button" id="next-round" disabled>Next Round</button>
-      </div>
-
     </div>
-
+    <!--
     <div class="instructions">
       <div class="instruction">
         <h3>Step 1</h3>
@@ -61,7 +82,7 @@
         <p>Click "Next Round" to play again.</p>
       </div>
     </div>
-
+  -->
     <script src="./script.js"></script>
     <script src="./game.js"></script>
   </body>
