Include vote.js

--- a/voting/index.html
+++ b/voting/index.html
@@ -90,6 +90,6 @@
     </div>
     -->
     <script src="./script.js"></script>
-    <script src="./game.js"></script>
+    <script src="./vote.js"></script>
   </body>
 </html>
