--- a/voting/index.html
+++ b/voting/index.html
@@ -30,7 +30,7 @@
                 <button class="number-control left" id="subtract-a" disabled>-</button>
                 <button class="number-control right" id="add-a">+</button>
               </div>
-              <button class="button" id="vote-button-a">Vote "A"</button>
+              <button class="button" id="vote-button-a" disabled>Vote "A"</button>
             </div>
             <div class="card option-card">
               <div class="card-title">
@@ -41,7 +41,7 @@
                 <button class="number-control left" id="subtract-b" disabled>-</button>
                 <button class="number-control right" id="add-b">+</button>
               </div>
-              <button class="button" id="vote-button-b">Vote "B"</button>
+              <button class="button" id="vote-button-b" disabled>Vote "B"</button>
             </div>
           </div>  
           <button class="button" id="abstain">Abstain</button>
