--- a/voting/index.html
+++ b/voting/index.html
@@ -58,10 +58,10 @@
             <p class="stat">Votes used: <span id="votes-used">0</span></p>
             <p class="stat">Votes available: <span id="votes-available">10</span></p>
             <p class="stat">Rounds active: <span id="rounds-active">0</span></p>
-            <p class="stat">Active streak: <span id="">?</span></p>
+            <p class="stat">Active streak: <span id="active-streak">0</span></p>
             <p class="stat">Rounds missed: <span id="rounds-missed">0</span></p>
-            <p class="stat">Voted for A: <span id="vote-tally-a">0</span>&nbsp;<span id="total-a-votes">(?)</span></p>
-            <p class="stat">Voted for B: <span id="vote-tally-b">0</span>&nbsp;<span id="total-b-votes">(?)</span></p>
+            <p class="stat">Voted for A: <span id="vote-tally-a">0</span>&nbsp;(<span id="total-a-votes">0</span>)</p>
+            <p class="stat">Voted for B: <span id="vote-tally-b">0</span>&nbsp;(<span id="total-b-votes">0</span>)</p>
             <p class="stat">Abstained: <span id="abstain-tally">0</span></p>
           </div>
           <div class="card history-card">
