--- a/voting/index.html
+++ b/voting/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Voting</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://api.fontshare.com/v2/css?f[]=tabular@600,701,1,700,301,500,400,501,601,401,300&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>Time-Consistent Weighted Voting</h1>
+        <h1>Participation-Weighted Voting</h1>
       </header>
 
       <div class="rounds">
