Add settings control

--- a/voting/index.html
+++ b/voting/index.html
@@ -25,8 +25,8 @@
         <div>
           <div id="confirm-message">Confirm text</div>
           <div class="confirm-choices">
-          <input id="confirm-yes" type="button" value="Yes" />
-          <input id="confirm-no" type="button" value="No" />
+          <button id="confirm-yes">Yes</button>
+          <button id="confirm-no">No</button>
           </div>
         </div>
       </div>
@@ -59,6 +59,7 @@
           </div>  
           <button class="button" id="abstain">Abstain</button>
         </div>
+
         <div class="results-area">
           <div class="card stats-card">
             <div class="card-title">
@@ -81,12 +82,39 @@
               <p class="card-label">History</p>
             </div>
             <div id="history-area">
+              <p>New voter</p>
+              <p>10 votes were accrued.</p>
             </div>
           </div>
         </div>
         <div class="next-round-container">
           <button class="button" id="next-round">Next Round</button>
         </div> 
+
+        <div class="settings-area">
+          <div class="card settings-card">
+            <div class="card-title">
+              <p class="card-label">Settings</p>
+            </div>
+            <div class="settings">
+              <div class="setting">
+                <p class="setting-name">Vote Accrual Rate</p>
+                <input id="vote-accrual-rate-input" type="number" placeholder="10">
+                <button class="button" id="rate-set-button" onclick="setVoteAccrualRate()">Set</button>
+              </div>
+              <div class="setting">
+                <p class="setting-name">Active Streak Vote Accrual Rate Threshold (Rounds)</p>
+                <input id="active-streak-threshold-input" type="number" placeholder="10">
+                <button class="button" id="threshold-set-button" onclick="setActiveStreakThreshold()">Set</button>
+              </div>
+              <div class="setting">
+                <p class="setting-name">Active Streak Vote Accrual Rate</p>
+                <input id="active-streak-accrual-rate-input" type="number" placeholder="20">
+                <button class="button" id="streak-rate-set-button" onclick="setActiveStreakAccrualRate()">Set</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!--
@@ -107,5 +135,6 @@
     -->
     <script src="./script.js"></script>
     <script src="./vote.js"></script>
+    <script src="./settings.js"></script>
   </body>
 </html>
