--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -9,10 +9,7 @@
   <body>
     <header>
       <h1>dao</h1>
-      <button id="drip" type="submit" onClick="refreshPage()">drip</button>
-      <!-- 
-      <button id="drip">drip</button>
-      -->
+      <button id="drip-button" type="submit">drip</button>
     </header>
     <main>
       <!--
@@ -21,12 +18,9 @@
       <p id="display" class="fade-in">Waiting...</p>
     </main>
     <footer class="fade-in">
-      <a class="index" href="./index.html">
-        <img src="./img/yin-yang-solid.svg" />
-      </a>
+      <img id="yin-yang" src="./img/yin-yang-solid.svg" />
       <div id="links">
         <a class="footer-link" href="./about.html">&rarr;about</a>
-        <!--<a class="footer-link" href="https://github.com/ptrrdrck/codecademy/tree/master/mixed-messages" target="_blank">&rarr;github</a>-->
       </div>
     </footer>
     <script src="./script.js" type="text/javascript"></script>
