--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -15,6 +15,8 @@
       <p id="display" class="fade-in">Waiting...</p>
     </main>
     <div class="chapter-selection">
+      <button class="button" id="drip-again-button">Drip again</button>
+      <span class="select-text" id="bullet">&bull;</span>
       <span class="select-text">Select a chapter: </span>
       <div class="selection-area">
         <div class="input-area">
@@ -24,17 +26,19 @@
             <button class="button minus" id="subtract-button" disabled></button>
           </div>
         </div>
-        <button class="button" id="chapter-select-button" onclick="viewChapter()">View</button>
+        <button class="button" id="chapter-select-button">View</button>
       </div>
     </div>
     <!--<div class="chapter-selection">
       <span class="select-text">Percent read: </span><span class="select-text" id="percent-read">0%</span>
     </div>-->
     <footer class="fade-in">
-      <img id="yin-yang" src="./img/yin-yang-solid.svg" />
       <div id="links">
-        <a class="footer-link" href="./about.html">About</a>
+        <a class="footer-link" href="./about.html">&rarr;About</a>
+        <a class="footer-link" href="./about.html">&rarr;Suggest an edit</a>
+        <a class="footer-link" href="./about.html">&rarr;Support the project</a>
       </div>
+      <img id="yin-yang" src="./img/yin-yang-solid.svg" />
     </footer>
     <script src="./script.js" type="text/javascript"></script>
   </body>
