Split out translations

--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -40,6 +40,7 @@
       </div>
       <img id="yin-yang" src="./img/yin-yang-solid.svg" />
     </footer>
+    <script src="./dao.js" type="text/javascript"></script>
     <script src="./script.js" type="text/javascript"></script>
   </body>
 </html>
