--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -15,23 +15,28 @@
       <p id="display" class="fade-in">Waiting...</p>
     </main>
     <div class="chapter-selection">
-      <button class="button" id="drip-again-button">Drip again</button>
-      <span class="select-text" id="bullet">&bull;</span>
-      <span class="select-text">Select a chapter: </span>
-      <div class="selection-area">
-        <div class="input-area">
-          <input id="chapter-select-input" type="number" value="1">
-          <div class="number-controls">
-            <button class="button plus" id="add-button"></button>
-            <button class="button minus" id="subtract-button" disabled></button>
-          </div>
+      <div class="line-one">
+        <button class="button" id="drip-again-button">Drip again</button>
+        <span class="select-text" id="bullet">&bull;</span>
+        <div class="selection-area">
+          <span class="select-text">Select a chapter: </span>
+          <div class="selection-right">
+            <div class="input-area">
+              <input id="chapter-select-input" type="number" value="1">
+              <div class="number-controls">
+                <button class="button plus" id="add-button"></button>
+                <button class="button minus" id="subtract-button" disabled></button>
+              </div>
+            </div>
+            <button class="button" id="chapter-select-button">View</button>
+          </div>  
         </div>
-        <button class="button" id="chapter-select-button">View</button>
+      </div>
+      <div class="line-two">
+        <span class="select-text">Unread chapters: </span>
+        <div id="unread-chapters"></div>
       </div>
     </div>
-    <!--<div class="chapter-selection">
-      <span class="select-text">Percent read: </span><span class="select-text" id="percent-read">0%</span>
-    </div>-->
     <footer class="fade-in">
       <div id="links">
         <a class="footer-link" href="./about.html">&rarr;About</a>
