Fix unread chapters display

--- a/mixed-messages/index.html
+++ b/mixed-messages/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="line-two">
         <span class="select-text">Unread chapters: </span>
-        <div id="unread-chapters"></div>
+        <div id="table-placeholder"><table id="unread-chapters"></table></div>
       </div>
     </div>
     <footer class="fade-in">
